name:                word-wrap
version:             0.1
synopsis:            A library for word-wrapping
description:         A library for wrapping long lines of text.
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty
maintainer:          cygnus@foobox.com
copyright:           2017 Jonathan Daugherty
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Wrap

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
  build-depends:       base >=4.8,
                       text

test-suite word-wrap-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Main.hs
  ghc-options:         -Werror -Wall 
  build-depends:       base >= 4.8,
                       word-wrap,
                       hspec >= 2.4
